<resources>
    <string name="app_name">Learn My Kid</string>
    <string name="play">PLAY</string>
    <string name="learn">LEARN</string>
    <string name="draw">DRAW</string>
    <string name="profile">PROFILE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_drawing">clear drawing</string>
    <string name="play_now">Play now</string>
    <string name="_5_after_completing_the_level_you_will_go_to_the_compatibility_screen_and_press_the_back_button_to_go_to_the_next_level">5-After completing the level you will go to the compatibility screen and press the back button to go to the next level</string>
    <string name="_4_when_you_touch_the_box_it_changes_and_you_can_complete_the_level_by_making_it_the_same">4-When you touch the box, it changes and you can complete the level by making it the same.</string>
    <string name="_3_make_all_animal_names_and_images_in_level_one_as_stated_above">3-Make all animal names and images in Level one as stated above</string>
    <string name="_2_do_as_the_level_page_says">2-Do as the level page says</string>
    <string name="_1_touch_on_the_boxes_or_button">1- Touch on the boxes or button</string>
    <string name="how_to_play">How to play : -</string>
    <string name="_6_thank_you_for_playing">6-Thank you for playing</string>
    <string name="level_1">LEVEL-1</string>
    <string name="level_2">LEVEL-2</string>
    <string name="level_3">level-3</string>
    <string name="level_4">level-4</string>
    <string name="level_5">LEVEL-5</string>
    <string name="level_6">LEVEL-6</string>
    <string name="level_7">level-7</string>

    <string name="arrange_in_alphabetical_order_by_touching_the_button_a_b_c_d">ARRANGE IN ALPHABETICAL ORDER BY TOUCHING THE BUTTON [A B C D . . . . . . . .]</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="w">W</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="q">Q</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="b">B</string>

    <string name="wednesday">wednesday</string>
    <string name="arrange_it_as_the_day_of_the_week_by_touching_the_boxes">ARRANGE IT AS THE DAY OF THE WEEK BY TOUCHING THE BOXES : -</string>
    <string name="sunday">sunday</string>
    <string name="tuesday">TUESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="monday">MONDAY</string>
    <string name="saturday">Saturday</string>
    <string name="friday">friday</string>

    <string name="arrange_it_like_the_months_of_the_year_by_touching_the_buttons">ARRANGE IT LIKE THE MONTHS OF THE YEAR BY TOUCHING THE BUTTONS : -</string>
    <string name="march">MARCH</string>
    <string name="january">JANUARY</string>
    <string name="december">DECEMBER</string>
    <string name="october">OCTOBER</string>
    <string name="november">NOVEMBER</string>
    <string name="february">FEBRUARY</string>
    <string name="september">SEPTEMBER</string>
    <string name="april">APRIL</string>
    <string name="august">AUGUST</string>
    <string name="july">JULY</string>
    <string name="june">JUNE</string>
    <string name="may">MAY</string>
    <string name="touch_the_photo_below_to_make_it_look_like_this">Touch the photo below to make it look like this</string>

    <string name="bear">BEAR</string>
    <string name="elephant">ELEPHANT</string>
    <string name="tiger">TIGER</string>
    <string name="leopard">LEOPARD</string>
    <string name="lion">LION</string>
    <string name="giraffe">GIRAFFE</string>
    <string name="wolf">WOLF</string>
    <string name="fox">FOX</string>
    <string name="rhinoceros">RHINOCEROS</string>
    <string name="kangaroo">KANGAROO</string>
    <string name="zebra">ZEBRA</string>
    <string name="gorilla">GORILLA</string>
    <string name="circle">circle</string>
    <string name="triangle">triangle</string>
    <string name="polygon">polygon</string>
    <string name="trapaze">trapezium</string>
    <string name="pentagon">pentagon</string>
    <string name="hexagon">hexagon</string>
    <string name="right_triangle">right triangle</string>
    <string name="ring">ring</string>
    <string name="elipse">elipse</string>
    <string name="star">star</string>
    <string name="cross">cross</string>
    <string name="rectangle">rectangle</string>
    <string name="square">square</string>
    <string name="arrow">arrow</string>
    <string name="developer">developer</string>
    <string name="alphabates">alphabet\'s</string>
    <string name="week_name">week name</string>
    <string name="month_name">month name</string>
    <string name="touch_me">touch me</string>
    <string name="animals_touch_me">animals:-touch_me</string>

    <string name="arrange_it_like_this_rhyme_by_touching_on_the_lines">Arrange it like this rhyme by touching on the lines</string>
    <string name="twinkle_twinkle_little_star">TWINKLE TWINKLE LITTLE STAR :-</string>
    <string name="how_i_wonder_what_you_are">How I wonder what you are</string>
    <string name="twinkle_twinkle_little_star_1">Twinkle, twinkle, little star</string>
    <string name="like_a_diamond_in_the_sky">Like a diamond in the sky</string>
    <string name="up_above_the_world_so_high">Up above the world so high</string>
    <string name="then_you_show">Then you show…</string>
    <string name="when_the_blazing_sun_is_gone">When the blazing sun is gone</string>
    <string name="how_i_wonder_what_you_are_1">How I wonder what you are</string>
    <string name="twinkle_twinkle_little_star_2">Twinkle, twinkle little star</string>
    <string name="when_he_nothing_shines_upon">When he nothing shines upon</string>
    <string name="about_app">About App</string>
    <string name="play_and_learn">play and Learn</string>
    <string name="share">share</string>
    <string name="coming_soon">coming soon</string>
    <string name="learn_my_kid">Learn My Kid</string>
    <string name="aashutosh_rana">aashutosh rana</string>
    <string name="thanks_to_everyone">Thanks to everyone</string>
    <string name="whatsapp_8434230999">WhatsApp:- 8434230999</string>
    <string name="email_aashutosh_kr_2308_gmail_com">Email:-aashutosh.kr.2308@gmail.com</string>
    <string name="_19333">(19333)</string>
    <string name="electrical_engineering">Electrical Engineering</string>
    <string name="bhagalpur_college_of_engineering">Bhagalpur College of Engineering</string>
    <string name="aashutosh_rana_1">Aashutosh rana</string>
    <string name="touch_on_the_shapes_make_all_right">touch on the shapes make all right</string>
    <string name="shape_touch_me">SHAPE:-TOUCH ME</string>


</resources>
