<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical"
    tools:context=".activity.Level1">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:text="@string/arrange_in_alphabetical_order_by_touching_the_button_a_b_c_d"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:id="@+id/txtA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/h"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/s"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:background="@android:color/black"
            android:id="@+id/txtC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/r"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:background="@android:color/black"
            android:id="@+id/txtD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/q"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:background="@android:color/black"
            android:id="@+id/txtE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/g"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:background="@android:color/black"
            android:id="@+id/txtF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/w"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:id="@+id/txtG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/e"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/j"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/p"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtJ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/l"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/y"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/d"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:id="@+id/txtM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/i"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/n"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/f"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/z"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/x"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/t"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:id="@+id/txtS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/h"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/c"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtU"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/k"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/u"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/b"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/o"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:id="@+id/txtY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:background="@android:color/black"
            android:text="@string/m"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/txtZ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:background="@android:color/black"
            android:text="@string/a"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
</layout>