<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
  <pl.droidsonroids.gif.GifImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
      android:layout_marginTop="5dp"
    android:src="@drawable/study_gif"/>

        <Button
            android:id="@+id/btnPlayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/play_now"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/how_to_play"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/_1_touch_on_the_boxes_or_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/_2_do_as_the_level_page_says"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/_3_make_all_animal_names_and_images_in_level_one_as_stated_above"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/_4_when_you_touch_the_box_it_changes_and_you_can_complete_the_level_by_making_it_the_same"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/_5_after_completing_the_level_you_will_go_to_the_compatibility_screen_and_press_the_back_button_to_go_to_the_next_level"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>